# LinuxBasics

./: README.md
CMake_Tutorial/: main.cpp
CMake_Tutorial/Adding_Library/: CMakeLists.txt
CMake_Tutorial/Adding_Library/demoMain/: CMakeLists.txt  Demo.cpp
CMake_Tutorial/Adding_Library/demolib/src/: CMakeLists.txt  hello.cpp
CMake_Tutorial/Helloworld/: CMakeLists.txt
